--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -12,7 +12,7 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -23,19 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Start React vite app
-        run: npm run dev &
-        env:
-          CI: true
-
-      - name: Wait for app to be ready
-        uses: jakejarvis/wait-action@master
-        with:
-          url: "http://localhost:5173"
-
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
           start: npm run dev
-          wait-on: "http://localhost:5173"
           wait-on-timeout: 60
