--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -11,20 +11,27 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm install
+      - run: npm ci
 
-      - name: Run Cypress tests
-        uses: cypress-io/github-action@v6
+      - run: docker-compose up -d
+
+      - name: Wait for app to be ready
+        uses: jakejarvis/wait-action@master
         with:
-          start: npm run dev
+          url: "http://localhost:3000"
+          timeout: 60
+
+      - uses: cypress-io/github-action@v6
+        with:
+          install: false
+          start: ""
+          wait-on: "http://localhost:3000"
           wait-on-timeout: 60
