--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -11,27 +11,31 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - run: npm ci
+      - name: Install dependencies
+        run: npm install
 
-      - run: docker-compose up -d
+      - name: Start React app
+        run: npm run dev &
+        env:
+          CI: true
 
       - name: Wait for app to be ready
         uses: jakejarvis/wait-action@master
         with:
           url: "http://localhost:3000"
-          timeout: 60
 
-      - uses: cypress-io/github-action@v6
+      - name: Run Cypress tests
+        uses: cypress-io/github-action@v6
         with:
-          install: false
-          start: ""
+          start: npm run dev
           wait-on: "http://localhost:3000"
           wait-on-timeout: 60
