--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           url: "http://localhost:3000"
 
+      - name: Wait for app to load
+        run: sleep 30
+
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
